--- a/dz/HTML and CSS/style.css
+++ b/dz/HTML and CSS/style.css
@@ -18,9 +18,7 @@
   color: darkred;
 }
 
-body {
-    background: linear-gradient(cyan, purple);
-}
+
 
 .whiteback {
     background-color: white;
@@ -42,4 +40,22 @@ body {
   margin-top: 40px;
   margin-bottom: 60px;
   position: relative;
+}
+/* body {
+    background: linear-gradient(cyan, purple);
+} */
+ body {
+    background: lightblue;
+}
+
+@media (max-width: 1000px){
+body{
+  background-color: #d81b60;
+}
+}
+
+.HoverCatch:hover{
+  transform: translateX(800px);
+  transition: transform 500ms ease-out 50ms;
+  background-color: #d81b60;
 }
