--- a/dz/Rezume springboard/src/styles.css
+++ b/dz/Rezume springboard/src/styles.css
@@ -304,3 +304,27 @@ ul.tab li a:focus, .active {
 .error_message {
   color: red;
 }
+
+.sidebar {
+  background: #0527005e;
+  width: 420px;               
+  min-width: 400px;           
+  padding: 40px 30px;         
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+}
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .sidebar {
+        width: 50%;                
+        max-width: 50%;
+        padding: 20px 16px;         
+    }
+  }
+
+  
